tests/baselines/reference/noImplicitAnyForIn.errors.txt
noImplicitAnyForIn.ts(7,18): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
  No index signature with a parameter of type 'string' was found on type '{}'.
noImplicitAnyForIn.ts(14,18): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
  No index signature with a parameter of type 'string' was found on type '{}'.
noImplicitAnyForIn.ts(28,5): error TS7005: Variable 'n' implicitly has an 'any[][]' type.
noImplicitAnyForIn.ts(28,9): error TS2872: This kind of expression is always truthy.
noImplicitAnyForIn.ts(30,6): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.


==== noImplicitAnyForIn.ts (5 errors) ====
    var x: {}[] = [[1, 2, 3], ["hello"]];
    
    for (var i in x) {
        for (var j in x[i]) {
    
            //Should yield an implicit 'any' error
            var _j = x[i][j];
                     ~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{}'.
        }
    
        for (var k in x[0]) {
            var k1 = x[0];
    
            //Should yield an implicit 'any' error
            var k2 = k1[k];
                     ~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{}'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{}'.
        }
    }
    
    for (var a in x) {
        // Should yield an implicit 'any' error.
        var b;
    
        var c = a || b;
    }
    
    var idx = 0;
    var m = [1, 2, 3, 4, 5];
    // Should yield an implicit 'any' error.
    var n = [[]] || [];
        ~
!!! error TS7005: Variable 'n' implicitly has an 'any[][]' type.
            ~~~~
!!! error TS2872: This kind of expression is always truthy.
    
    for (n[idx++] in m);
         ~~~~~~~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.